# Url-Shortener-Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  diesel.toml  docker-compose.yml
migrations/2025-05-24-180422_create_urls/: up.sql
migrations/2025-05-26-203544_create_url_view/: down.sql  up.sql
src/: DEV.md  main.rs  schema.rs  schema_backup.rs  schema_example.rs
src/config/: db_config.rs  mod.rs
src/domain/: mod.rs
src/domain/errors/: domain_errors.rs  mod.rs
src/domain/persistence/: models.rs
src/domain/requests/: mod.rs  objects.rs
src/domain/responses/: mod.rs  objects.rs
src/domain/types/: mod.rs  objects.rs  url.rs
src/endpoints/: mod.rs  url_shortener_endpoints.rs
src/examples/: database.sql
src/persistence/: database.rs  mod.rs  schema.rs
src/services/: mod.rs  url_shortener_service.rs
