[package]
name = "UrlShortener"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
actix-web = "4.4"
serde = { version = "1.0.219", features = ["derive"] }
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
tokio-cron-scheduler = "*"
chrono = "0.4.41"
tokio = "1.45.0"